--- a/src/SearchService/appsettings.json
+++ b/src/SearchService/appsettings.json
@@ -2,8 +2,14 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "MongoDbConnection": "mongodb://root:mongo@localhost"
+  },
+  "AuctionServiceUrl": "http://localhost:7001",
+  "RabbitMq": {
+    "Host": "localhost"
+  }
 }
