--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,14 @@
 {
   "arrowParens": "always",
-  "bracketSameLine": true,
+  "bracketSameLine": false,
   "bracketSpacing": true,
   "semi": false,
+  "experimentalTernaries": false,
   "singleQuote": true,
   "jsxSingleQuote": true,
   "quoteProps": "as-needed",
   "trailingComma": "all",
+  "singleAttributePerLine": false,
   "htmlWhitespaceSensitivity": "css",
   "vueIndentScriptAndStyle": false,
   "proseWrap": "preserve",
