--- a/src/IdentityService/appsettings.json
+++ b/src/IdentityService/appsettings.json
@@ -10,8 +10,9 @@
       }
     }
   },
-  "ClientApp": "http://localhost:3000",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost:5432; User Id=postgres; Password=postgres; Database=identity"
-  }
+  },
+  "ClientApp": "http://localhost:3000",
+  "ClientSecret": "secret"
 }
