--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,12 +17,15 @@
     "query-string": "^8.1.0",
     "react": "^18",
     "react-countdown": "^2.3.5",
+    "react-datepicker": "^6.1.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.50.0",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-datepicker": "^4.19.5",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
