--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-datepicker": "^6.1.0",
     "react-dom": "^18",
     "react-hook-form": "^7.50.0",
+    "react-hot-toast": "^2.4.1",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
