--- a/src/BiddingService/appsettings.Development.json
+++ b/src/BiddingService/appsettings.Development.json
@@ -12,5 +12,5 @@
   "RabbitMq": {
     "Host": "localhost"
   },
-  "GrpcAuction": "http://locahost:7777"
+  "GrpcAuction": "http://localhost:7777"
 }
