--- a/src/GatewayService/appsettings.json
+++ b/src/GatewayService/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "IdentityServiceUrl": "http://localhost:5000",
+  "ClientApp": "http://localhost:3000",
   "ReverseProxy": {
     "Routes": {
       "auctionsRead": {
@@ -69,6 +70,13 @@
             "PathPattern": "api/bids/{**catch-all}"
           }
         ]
+      },
+      "notifications": {
+        "ClusterId": "notifications",
+        "CorsPolicy": "customPolicy",
+        "Match": {
+          "Path": "/notifications/{**catch-all}"
+        }
       }
     }
   }
