--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@microsoft/signalr": "^8.0.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "date-fns": "^3.3.1",
     "flowbite": "^2.2.0",
     "flowbite-react": "^0.7.0",
     "next": "14.0.3",
