--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,9 @@
+networks:
+  custom:
+    ipam:
+      config:
+        - subnet: 10.5.0.0/16
+
 services:
   postgres:
     image: postgres
@@ -7,6 +13,8 @@ services:
       - 5432:5432
     volumes:
       - /var/lib/postgressql/data
+    networks:
+      custom:
   mongo:
     image: mongo
     environment:
@@ -16,11 +24,15 @@ services:
       - 27017:27017
     volumes:
       - /var/lib/mongodb/data
+    networks:
+      custom:
   rabbitmq:
     image: rabbitmq:3-management-alpine
     ports:
       - 5672:5672
       - 15672:15672
+    networks:
+      custom:
   auction-svc:
     image: ngtuanloc/auction-svc:latest
     build:
@@ -43,6 +55,8 @@ services:
     depends_on:
       - postgres
       - rabbitmq
+    networks:
+      custom:
   search-svc:
     image: ngtuanloc/search-svc:latest
     build:
@@ -59,6 +73,8 @@ services:
     depends_on:
       - mongo
       - rabbitmq
+    networks:
+      custom:
   identity-svc:
     image: ngtuanloc/identity-svc:latest
     build:
@@ -70,10 +86,13 @@ services:
       - RabbitMq__Host=rabbitmq
       - ConnectionStrings__DefaultConnection=Server=postgres:5432; User Id=postgres; Password=postgres; Database=identity
     ports:
-      - 5000:80
+      - 80:80
     depends_on:
       - postgres
       - rabbitmq
+    networks:
+      custom:
+        ipv4_address: 10.5.0.200
   gateway-svc:
     image: ngtuanloc/gateway-svc:latest
     build:
@@ -84,6 +103,8 @@ services:
       - ASPNETCORE_URLS=http://+:80
     ports:
       - 6001:80
+    networks:
+      custom:
   bid-svc:
     image: ngtuanloc/bid-svc:latest
     build:
@@ -101,6 +122,8 @@ services:
     depends_on:
       - mongo
       - rabbitmq
+    networks:
+      custom:
   notify-svc:
     image: ngtuanloc/notify-svc:latest
     build:
@@ -114,3 +137,25 @@ services:
       - 7004:80
     depends_on:
       - rabbitmq
+    networks:
+      custom:
+  web-app:
+    image: ngtuanloc/web-app:latest
+    build:
+      context: .
+      dockerfile: ./frontend/Dockerfile
+    volumes:
+      - /var/lib/web/data
+    ports:
+      - 3000:3000
+    extra_hosts:
+      id.carties.com: 10.5.0.200
+    environment:
+      - NEXTAUTH_SECRET=secret
+      - NEXTAUTH_URL=http://localhost:3000
+      - NEXTAUTH_URL_INTERNAL=http://web-app:3000
+      - API_URL=http://gateway-svc
+      - ID_URL=id.carties.com
+      - NEXT_PUBLIC_NOTIFY_URL=http://gateway-svc/notifications
+    networks:
+      custom:
