--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.50.0",
     "react-hot-toast": "^2.4.1",
+    "sharp": "^0.33.2",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
